# python-notes

./: .gitignore
GenAI/Models/: chatModels_hf_api.py  doc_embedding_similarity.py  prompt.py
fastapi/: field_validator.py  main.py  patients.json  pydantic.py  pydantic_self.py
lexichat/: calling.py  db.py  docker-compose.yml  main.py  manage_documents.py  pyproject.toml
pydantic/: field_validator.py  nested_model.py  pydantic_self.py  serialization.py
rag/: RAG_Application_using_Langchain_OpenAI_API_and_FAISS.ipynb  RAG_from_scratch_basics.ipynb
