[project]
name = "lexichat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.72.0",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pdftotext",
    "peewee>=4.0.4",
    "pgvector>=0.4.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
